// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search Error Message > Renders a message with a search query 1`] = `
{
  "baseElement": <body>
    <div>
      <div
        class="error-msg__container"
      >
        <span
          class="error__msg"
        >
          Sorry, 
          <span
            class="error__msg--query"
          >
            we’re unable to display results for 
            <strong>
              Search Query
            </strong>
             right now. 
          </span>
          <span
            class="error-msg__common"
          >
            <span
              class="error-msg__common--first-letter"
              data-testid="error-msg__common--first-letter"
            >
              t
            </span>
            he server is taking too long to respond. Please try a different query, try again later, or 
            <a
              href="Survey URL"
              rel="noopener noreferrer"
              target="_blank"
            >
              let us know
            </a>
            .
          </span>
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="error-msg__container"
    >
      <span
        class="error__msg"
      >
        Sorry, 
        <span
          class="error__msg--query"
        >
          we’re unable to display results for 
          <strong>
            Search Query
          </strong>
           right now. 
        </span>
        <span
          class="error-msg__common"
        >
          <span
            class="error-msg__common--first-letter"
            data-testid="error-msg__common--first-letter"
          >
            t
          </span>
          he server is taking too long to respond. Please try a different query, try again later, or 
          <a
            href="Survey URL"
            rel="noopener noreferrer"
            target="_blank"
          >
            let us know
          </a>
          .
        </span>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "isUnmounted": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "unmount": [Function],
  "updateProps": [Function],
}
`;

exports[`Search Error Message > Renders a message without a search query 1`] = `
{
  "baseElement": <body>
    <div>
      <div
        class="error-msg__container"
      >
        <span
          class="error__msg"
        >
          Sorry, 
          <!---->
          <span
            class="error-msg__common"
          >
            <span
              class=""
              data-testid="error-msg__common--first-letter"
            >
              t
            </span>
            he server is taking too long to respond. Please try a different query, try again later, or 
            <a
              href="Survey URL"
              rel="noopener noreferrer"
              target="_blank"
            >
              let us know
            </a>
            .
          </span>
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="error-msg__container"
    >
      <span
        class="error__msg"
      >
        Sorry, 
        <!---->
        <span
          class="error-msg__common"
        >
          <span
            class=""
            data-testid="error-msg__common--first-letter"
          >
            t
          </span>
          he server is taking too long to respond. Please try a different query, try again later, or 
          <a
            href="Survey URL"
            rel="noopener noreferrer"
            target="_blank"
          >
            let us know
          </a>
          .
        </span>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "isUnmounted": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "unmount": [Function],
  "updateProps": [Function],
}
`;
